src/components/Comment/comment.module.css
.comment {
  display: grid;
  grid-template-columns: 40px 1fr;
  column-gap: 1rem;
  row-gap: 1rem;
  align-items: center;
}

.comment img {
  width: 100%;
}

.comment p {
  color: var(--gray-dark-c);
  grid-column-start: 1;
  grid-column-end: span 2;
}

.header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.content b {
  color: var(--primary-purple);
}

.replies {
  margin-top: 1.5rem;
}

.replies > div {
  padding-left: 1.5rem;
  padding-bottom: 1.5rem;
  border-left: 1px solid rgb(140 146 179 / 25%);
}

/* Styles necessary to draw left border a little bit into the last element */
.replies > div:nth-last-child(2) {
  padding-bottom: 3rem;
}

.replies > div:last-child {
  margin-top: -1.25rem;
  border-left: none;
  padding-bottom: 0;
}
/*  */

.replyForm {
  margin-top: 1rem;
  text-align: right;
  grid-column-start: 1;
  grid-column-end: span 2;
}

.replyForm textarea {
  margin-bottom: 1rem;
}

@media (min-width: 768px) {
  .comment {
    column-gap: 2rem;
    row-gap: 10px;
    margin-bottom: 2rem;
  }
  .comment > p {
    grid-column-start: 2;
  }
  .comment:has(+ .replies) > p {
    font-size: 0.9375rem;
    padding-bottom: 32px;
  }
  .comment:has(+ .replies) > p::before {
    position: absolute;
    /* TODO: Create variables for avatar size and maybe this space between the line and the avatar */
    top: calc(40px + 28px);
    left: 20px;
    width: 1px;
    height: calc(100% - 40px - 28px);
    content: "";
    border-left: 1px solid rgb(140 146 179 / 25%);
  }
  /* .comment has an immediate sibling with class .replies */
  .comment:has(+ .replies) {
    position: relative;
    border-bottom: none;
    margin-bottom: 0;
    padding-bottom: 0;
  }
  .comment + .replies {
    margin-top: 0;
  }
  .replies > div {
    padding-left: 3rem;
    margin-left: 20px;
  }
  .replies > div:last-child {
    margin-top: -2rem;
    border-left: none;
    padding-bottom: 0;
  }
  .replies .comment {
    padding-bottom: 1rem;
    margin-bottom: 0;
  }
  .replyForm {
    grid-column-start: 2;
  }
}

